--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,31 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.cartAll {
+  display: flex;
+  flex-direction: column;
+}
+
+.cartItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+}
+
+div .cartImage img {
+  width: auto;
+  height: 30vh;
+}
+
+.cartDeatils {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+}
+
+.cartDetailsBlock {
+  font-size: 12px;
+  flex-direction: column;
+  justify-content: left;
+}
