convert Cart component to class component, add flex box for totals

--- a/public/style.css
+++ b/public/style.css
@@ -20,7 +20,12 @@ form div {
   display: inline-block;
 }
 
+.cart {
+  display: flex;
+}
+
 .cartAll {
+  border: solid black;
   display: flex;
   flex-direction: column;
 }
