added checkout button, updated getCartItems function

--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,11 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.collection-items {
+  display: flex;
+  flex-direction: column;
+}
+
+.item-totals {
+}
